# Ferro

./: .gitignore  README.md  RELEASE.md
.github/workflows/: ci.yml  release.yml
ferro/: Cargo.toml  README.md  USAGE.txt
ferro/src/: cli.rs  downloader.rs  iso_api.rs  main.rs  types.rs  utils.rs
