[package]
name = "ferro"
version = "0.1.0"
edition = "2021"
authors = ["Ferro Contributors"]
description = "A cross-platform Windows ISO downloader - Rust rewrite of Fido"
license = "GPL-3.0-or-later"
repository = "https://github.com/ajaikumarvs/Ferro"
keywords = ["windows", "iso", "downloader", "microsoft", "cross-platform"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "stream", "cookies"] }
reqwest_cookie_store = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
anyhow = "1.0"
thiserror = "1.0"
futures-util = "0.3"
sys-locale = "0.3"
regex = "1.10"
url = "2.5"
log = "0.4"
env_logger = "0.11"
dirs = "5.0"
